factoryずらっと作っちゃう
