# app/controllers/api/v1/works_controller.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class Api::V1::WorksController < ApplicationController
+  def index
+    works = Work.all.includes(:author, :category, :image_files, :creators, :tags, :assets)
+
+    render json: works, each_serializer: WorkSerializer, status: 200
+  end
+end
